--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ stages:
         wget https://releases.hashicorp.com/packer/$(packer_version)/packer_$(packer_version)_linux_amd64.zip -O packer.zip
         unzip packer.zip
         ./packer build \
+          -force \
           -var 'client_id=$(client_id)' \
           -var 'client_secret=$(client_secret)' \
           -var 'tenant_id=$(tenant_id)' \
